<resources>
    <string name="app_name">Password Manager</string>

    // Pre Login Activity
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>

    // Activity Titles
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="main_title">Accounts</string>
    <string name="main_title_2">Password Generator</string>
    <string name="main_title_3">Password Validator</string>

    // Login Activity and Reg
    <string name="email_hint">Enter Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password_hint1">Enter Password</string>
    <string name="password_hint2">Confirm Password</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="enter_display_name">Enter Name</string>

    <string name="null_data">NULL</string>
    <string name="stay_logged_in">Stay Logged In?</string>
    <string name="title_activity_main_tabbed">MainActivityTabbed</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="password_strength">Password Length:</string>
    <string name="password_with_symbols">Symbols?</string>
    <string name="chk_symbols">Symbols?</string>
    <string name="chk_numbers">Numbers?</string>
    <string name="chk_letters">Letters?</string>
    <string name="generate_password">Generate Password</string>
    <string name="create_saved_password">Store Account</string>
    <string name="generated_password">Generated Password</string>
    <string name="copy_password">Copy</string>
    <string name="save_password">Save</string>
    <string name="check_password">Check Password</string>
    <string name="enter_password_hint">Enter Password!</string>
    <string name="welcome">Welcome</string>
    <string name="enter_pin_here">Enter Pin Here!</string>
    <string name="enter">Enter</string>
    <string name="confirm_pin">Confirm Pin!</string>
    <string name="username">Username</string>
    <string name="show_password">Show Password?</string>
    <string name="password">Password</string>
    <string name="password_strength_checker">Password Strength</string>
    <string name="enter_search_criteria">Enter Search Criteria</string>
    <string name="_0_results_found">0 results found</string>
</resources>
