<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorGrey2"
             tools:context=".LoginActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_content"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:keepScreenOn="true"
              android:textColor="@android:color/white"
              android:textSize="50sp"
              android:gravity="center"
              android:text="@string/login_title" android:textAlignment="center"
              android:fontFamily="@font/montserrat_bold" android:textStyle="bold"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:autofillHints="email"
                android:ems="10"
                android:id="@+id/emailField" android:hint="@string/email_hint" android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.31" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                android:textColor="@android:color/white" android:textColorHint="@android:color/white"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:ems="10"
                android:id="@+id/passwordField"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailField"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.050000012"
                android:hint="@string/password_hint1" android:textAlignment="center" android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                android:textColor="@android:color/white" android:textColorHint="@android:color/white"/>
        <TextView
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/forgotPasswordText"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordField" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.0"
                android:textColor="@android:color/holo_red_dark"/>
        <CheckBox
                android:text="@string/stay_logged_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/stay_logged_in_check"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/forgotPasswordText"
                app:layout_constraintVertical_bias="0.0" android:textColor="@android:color/white"
                android:checked="true"/>
    </android.support.constraint.ConstraintLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="false">

        <LinearLayout android:id="@+id/fullscreen_content_controls"
                      style="?metaButtonBarStyle"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom|center_horizontal"
                      android:orientation="horizontal"
                      tools:ignore="UselessParent">

            <Space
                    android:layout_width="50dp"
                    android:layout_height="match_parent" android:layout_weight=".8"/>
            <Button android:id="@+id/loginButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:text="@string/login_button" android:textAlignment="center"
                    android:fontFamily="@font/montserrat_bold" android:textColorLink="@color/colorAccent"
                    android:textColor="@android:color/white" android:background="@color/black_overlay"/>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>