<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorGrey2"
             tools:context=".PreLoginActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_content"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:keepScreenOn="true"
              android:textColor="@android:color/white"
              android:textSize="50sp"
              android:gravity="center"
              android:text="@string/app_name" android:textAlignment="center"
              android:fontFamily="@font/montserrat_bold" android:textStyle="bold"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="false">

        <LinearLayout android:id="@+id/fullscreen_content_controls"
                      style="?metaButtonBarStyle"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom|center_horizontal"
                      android:orientation="horizontal"
                      tools:ignore="UselessParent">

            <Button
                    android:text="@string/register_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/registerButton" android:layout_weight=".5"
                    android:background="@drawable/button_style" android:textSize="18sp" android:elevation="0dp"
                    android:padding="20dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp" style="@style/Widget.AppCompat.Button.Borderless"/>
            <Button
                    android:text="@string/login_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/loginButton" android:layout_weight=".5"
                    android:background="@drawable/button_style" android:textSize="18sp" android:elevation="0dp"
                    android:padding="20dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp" style="@style/Widget.AppCompat.Button.Borderless"/>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>