<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorGrey2"
             tools:context=".RegisterActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_content"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:keepScreenOn="true"
              android:textColor="@android:color/white"
              android:textSize="50sp"
              android:gravity="center"
              android:text="@string/register_title" android:textAlignment="center"
              android:fontFamily="@font/montserrat_bold" android:textStyle="bold"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/emailInputField" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:hint="@string/email_hint"
                app:layout_constraintVertical_bias="0.31"
                android:textAppearance="@android:style/TextAppearance.Material" android:fontFamily="sans-serif"
                android:textSize="18sp" android:textColor="@android:color/white" android:textAlignment="center"
                android:textColorHint="@android:color/white" android:autofillHints="email"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordInputField" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/emailInputField" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.050000012"
                android:hint="@string/password_hint1"
                android:textAppearance="@android:style/TextAppearance.Material" android:fontFamily="sans-serif"
                android:textSize="18sp" android:textColor="@android:color/white" android:textAlignment="center"
                android:textColorHint="@android:color/white" android:autofillHints="password"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordInputFieldConfirmation" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordInputField" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.050000012"
                android:hint="@string/password_hint2"
                android:textAppearance="@android:style/TextAppearance.Material" android:fontFamily="sans-serif"
                android:textSize="18sp" android:textColor="@android:color/white" android:textAlignment="center"
                android:textColorHint="@android:color/white" android:autofillHints="password"/>
    </android.support.constraint.ConstraintLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="false">

        <LinearLayout android:id="@+id/fullscreen_content_controls"
                      style="?metaButtonBarStyle"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom|center_horizontal"
                      android:orientation="horizontal"
                      tools:ignore="UselessParent">
            <Space
                    android:layout_width="50dp"
                    android:layout_height="match_parent" android:layout_weight=".8"/>
            <Button android:id="@+id/registerButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:text="@string/register_button" android:textAlignment="center"
                    android:fontFamily="@font/montserrat_bold" android:textColorLink="@color/colorAccent"
                    android:textColor="@android:color/white" android:background="@color/black_overlay"/>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>