<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorGrey2"
             tools:context=".LockActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView android:id="@+id/fullscreen_content"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:keepScreenOn="true"
                  android:textColor="@android:color/white"
                  android:textSize="50sp"
                  android:gravity="center"
                  android:text="@string/welcome" android:textAlignment="center"
                  android:fontFamily="@font/montserrat_bold" android:textStyle="bold"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                  app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/txtPin1" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fullscreen_content"
                app:layout_constraintVertical_bias="0.13" android:textAlignment="center"
                android:hint="@string/enter_pin_here"
                android:textColor="@color/White" android:textColorHint="@color/lightWhite" android:maxLength="4"
                android:autofillHints=""/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/txtPin2" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fullscreen_content"
                app:layout_constraintVertical_bias="0.23000002" android:textAlignment="center"
                android:hint="@string/confirm_pin"
                android:textColor="@color/White" android:textColorHint="@color/lightWhite" android:maxLength="4"
                android:visibility="invisible" android:importantForAutofill="no"/>
    </android.support.constraint.ConstraintLayout>
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="false" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout android:id="@+id/fullscreen_content_controls"
                      style="?metaButtonBarStyle"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom|center_horizontal"
                      android:orientation="horizontal"
                      tools:ignore="UselessParent">
            <Button
                    android:text="@string/enter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnEnter"
                    android:layout_weight="1"
                    android:background="@drawable/button_style" android:textSize="18sp" android:elevation="0dp"
                    android:padding="20dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </FrameLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>