<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorGrey2"
             tools:context=".MainActivityTabbed$PlaceholderFragment">

<!-- The primary full-screen view. This can be replaced with whatever view
     is needed to present your content, e.g. VideoView, SurfaceView,
     TextureView, etc. -->
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView android:id="@+id/fullscreen_content"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:keepScreenOn="true"
                  android:textColor="@android:color/white"
                  android:textSize="50sp"
                  android:gravity="center"
                  android:text="@string/main_title_3" android:textAlignment="center"
                  android:fontFamily="@font/montserrat_bold" android:textStyle="bold"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtPassInput"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/fullscreen_content"
                app:layout_constraintVertical_bias="0.100000024" android:textColor="@color/White"
                android:textColorHint="@color/lightWhite" android:textAlignment="center"
                android:hint="@string/enter_password_hint" android:autofillHints=""/>
        <TextView
                android:text="@string/password_strength_checker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txtPassInput" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/passwordStrengthBar"
                app:layout_constraintVertical_bias="1.0" android:textColor="#FFFFFF" android:textStyle="bold"
                android:textAlignment="center"/>
        <ProgressBar
                style="@android:style/Widget.Material.ProgressBar.Horizontal"
                android:progressDrawable="@drawable/progress_style"
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:id="@+id/passwordStrengthBar"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtPassInput"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent" android:max="100"
                android:progress="0" android:background="#00FF0000"/>
    </android.support.constraint.ConstraintLayout>
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="false" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout android:id="@+id/fullscreen_content_controls"
                      style="?metaButtonBarStyle"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom|center_horizontal"
                      android:orientation="horizontal"
                      tools:ignore="UselessParent"/>
    </FrameLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>